<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TimelineScrollFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Header" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/booldk">

                <TextView
                    android:text="@string/Bool_ENG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/boolBtn"
                    android:text="@string/article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/videoboolBtn"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/mechadk">

                <TextView
                    android:text="@string/Mecha_ENG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/mechaBtn"
                    android:text="@string/article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/videomechaBtn"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/eniacdk">

                <TextView
                    android:text="@string/First_ENG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/digitBtn"
                    android:text="@string/article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/videodigitBtn"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/ibmdk">

                <TextView
                    android:text="@string/IBM_ENG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/ibmBtn"
                    android:text="@string/article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/videoibmBtn"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>