<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInFragment">

    <EditText
        android:id="@+id/loginET"
        android:hint="@string/loginHint_ENG"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/passwordET"
        android:hint="@string/PasswordHint_ENG"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/enterBtn"
        android:text="@string/enter_ENG"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/commentTV"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>